src/objects/UM_ServiceabilitySetup__mdt.object
<CustomObject>
    <description>This object contains all the setup data related to serviceability</description>
    <fields>
        <fullName>UM_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_DisplayConfiguration__c</fullName>
        <label>Display Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_FieldSetName__c</fullName>
        <label>Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Serviceability Setup</label>
    <pluralLabel>Serviceability Setup</pluralLabel>
</CustomObject>